[gd_scene load_steps=8 format=2]

[ext_resource path="res://Satellite.gd" type="Script" id=1]
[ext_resource path="res://assets/art/PNG/Default/satellite_A.png" type="Texture" id=2]
[ext_resource path="res://HealthDisplay.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.504202, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.572549, 0.572549, 0.572549, 1, 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 25 )

[sub_resource type="CircleShape2D" id=3]
radius = 400.0

[sub_resource type="CircleShape2D" id=4]
radius = 2000.0

[node name="Satellite" type="KinematicBody2D" groups=[
"minimap_objects",
"satellites",
]]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 15.0
default_color = Color( 0.603922, 0.952941, 1, 1 )
gradient = SubResource( 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="HealthDisplay" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 0.490196, 1, 0.196078 )
scale = Vector2( 0.45, 0.75 )
z_index = 1

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 0 )
shape = SubResource( 2 )

[node name="DetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 3 )
one_way_collision_margin = 5.0

[node name="InfluenceRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfluenceRadius"]
shape = SubResource( 4 )
one_way_collision_margin = 5.0

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
